<?xml version="1.0"?>
<!-- The MIT License Copyright (c) 2015-2020 CSC - IT Center for Science, http://www.csc.fi Permission is hereby granted, free 
    of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in 
    the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, 
    sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject 
    to the following conditions: The above copyright notice and this permission notice shall be included in all copies or substantial 
    portions of the Software. THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT 
    NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL 
    THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT 
    OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fi.csc.idp.stepup</groupId>
  <artifactId>idp-stepup-parent</artifactId>
  <version>1.0.0-RC1</version>
  <packaging>pom</packaging>
  <modules>
    <module>idp-stepup-api</module>
    <module>idp-stepup-impl</module>
    <module>idp-stepup-distribution</module>
  </modules>
  <properties>
    <shib.idp.oidc.extension.version>2.0.0</shib.idp.oidc.extension.version>
    <spring.version>5.2.4.RELEASE</spring.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <shib.idp.version>4.0.0</shib.idp.version>
    <opensaml.version>4.0.0</opensaml.version>
    <guava.version>28.2-jre</guava.version>
  </properties>
  <repositories>
    <repository>
      <id>shib-release</id>
      <url>https://build.shibboleth.net/nexus/content/groups/public</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>shib-snapshot</id>
      <url>https://build.shibboleth.net/nexus/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
    </repository>
  </repositories>
  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <url>https://github.com/CSCfi/stepup-proxy</url>
    <connection>scm:git:git://github.com/CSCfi/stepup-proxy.git</connection>
    <developerConnection>scm:git:https://github.com/CSCfi/stepup-proxy</developerConnection>
    <tag>HEAD</tag>
  </scm>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>3.1.0</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>3.0.2</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>org.testng</groupId>
        <artifactId>testng</artifactId>
        <version>7.3.0</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-test</artifactId>
        <version>${spring.version}</version>
      </dependency>
      <dependency>
        <groupId>net.shibboleth.idp</groupId>
        <version>${shib.idp.version}</version>
        <artifactId>idp-profile-api</artifactId>
      </dependency>
      <dependency>
        <groupId>org.geant</groupId>
        <version>${shib.idp.oidc.extension.version}</version>
        <artifactId>idp-oidc-extension-api</artifactId>
      </dependency>
      <dependency>
        <groupId>org.geant</groupId>
        <version>${shib.idp.oidc.extension.version}</version>
        <artifactId>idp-oidc-extension-impl</artifactId>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.8.0</version>
      </dependency>
      <dependency>
        <groupId>com.nimbusds</groupId>
        <artifactId>oauth2-oidc-sdk</artifactId>
        <version>6.5</version>
      </dependency>
      <dependency>
        <groupId>net.shibboleth.idp</groupId>
        <artifactId>idp-authn-api</artifactId>
        <version>${shib.idp.version}</version>
      </dependency>
      <dependency>
        <groupId>fi.csc.idp.stepup</groupId>
        <artifactId>idp-stepup-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.velocity</groupId>
        <artifactId>velocity</artifactId>
        <version>1.7</version>
      </dependency>
      <dependency>
        <groupId>com.warrenstrange</groupId>
        <artifactId>googleauth</artifactId>
        <version>1.5.0</version>
      </dependency>
      <dependency>
        <groupId>com.twilio.sdk</groupId>
        <artifactId>twilio</artifactId>
        <version>8.3.0</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-crypto</artifactId>
        <version>5.3.5.RELEASE</version>
      </dependency>
      <dependency>
        <groupId>net.shibboleth.idp</groupId>
        <artifactId>idp-profile-api</artifactId>
        <version>${shib.idp.version}</version>
        <type>test-jar</type>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>3.6.28</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.icegreen</groupId>
        <artifactId>greenmail</artifactId>
        <version>1.5.0</version>
      </dependency>
      <dependency>
        <groupId>org.opensaml</groupId>
        <artifactId>opensaml-storage-impl</artifactId>
        <version>${shib.idp.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.5.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.6</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.eluder.coveralls</groupId>
        <artifactId>coveralls-maven-plugin</artifactId>
        <version>4.3.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
